added youtube videos

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 	  <header>
 	     <nav>
 	   <ul>
-	     <li>Home</li>
-	     <li><a href="1.html">The Flipped Card. </a></li>
-	     <li><a href="2.html">The Find  (blind version).</a></li>
-		 <li><a href="3.html">The Find.</a></li>
-		 <li><a href="4.html">The Triple Cut.</a></li>
+		<li>Home</li>
+		<li><a href="the-flipped-card.html">The Flipped Card.</a></li>
+		<li><a href="the-find-blind.html">The Find  (blind version)</a> </li>
+		<li><a href="the-find.html"> The Find</a></li>
+		<li><a href="the-triple-cut.html">The Triple Cut.</a></li>
+		<li><a href="info.html">Info.</a></li>
 	     </ul>
 	     </nav>
 	  </header>
@@ -115,26 +116,15 @@
 			    <p>DISCLOSER #### I do not own any of these companys/stores I am simply useing them to let you know about them so you can learn,                                
 				The Devloper 	 </p> 
 				<section><section class="topDivider"></section>
-				<section><section class="topDivider"></section>
-				<section><section class="topDivider"></section>
 				<p>This website is for magic only. I will try and update it once or twice a month. </p>
 				<section><section class="topDivider"></section>
-
-				<section><section class="topDivider"></section>
-
-				<section><section class="topDivider"></section>
-
 				<P>made useing rasberry pie 400</P>
 				<section><section class="topDivider"></section>
-				<P>Thank you for visting now go practice </P>
+				<P>Thank you for visting please go practice </P>
+
 				<section><section class="topDivider"></section>
-                 <P>why in the name of god are you still 
-					 reading this go forth and practice </P>
-					 <section><section class="topDivider"></section>
-<P>My lord go pactice I command you to go have fun and you know PRACTICE</P>
-<section><section class="topDivider"></section>
-<p>GO LEAVE ME IN PEACE          don"t forget to practice BYE</p>
-<section><section class="topDivider"></section>
+				<P>Update!</P>
+				<P>Stuff that is new includes: Video's for the tricks,an info page, as well as a bouns trick (In the futur these will not be not announct) (they are on the info page)</P>
 		   </section>	       
 		   </articale>
 	  </main>
