--- a/the-find-blind.html
+++ b/the-find-blind.html
@@ -9,11 +9,12 @@
 	  <header>
 	     <nav>
 	   <ul>
-	     <li><a href="index.html">Home</a></li>
-	     <li><a  href="1.html">The Flipped Card. </a></li>
-	     <li>The Find  (blind version) </li>
-		 <li><a  href="3.html"> The Find</a></li>
-		 <li><a href="4.html">The Triple Cut.</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="the-flipped-card.html">The Flipped Card.</a></li>
+		<li>The Find (blind version) </li>
+		<li><a href="the-find.html"> The Find</a></li>
+		<li><a href="the-triple-cut.html">The Triple Cut.</a></li>
+		<li><a href="info.html">Info.</a></li>
 	     </ul>
 	     </nav>
 	  </header>
@@ -40,6 +41,8 @@
 			now look up and tell them to flip over the card (ex.flip over the 5 of
 			 hearts) THEY WILL BE AMAZED! 
 			 And you know PRACTICE</p>
+
+			 <iframe width="560" height="315" src="https://www.youtube.com/embed/7XCa4gMzIr0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	  </main>
 	  <footer>
 	    
