--- a/the-find.html
+++ b/the-find.html
@@ -9,11 +9,12 @@
 	  <header>
 	     <nav>
 	   <ul>
-	     <li><a href="index.html">Home</a></li>
-	     <li><a href="1.html">The Flipped Card. </a></li>
-	     <li><a href="2.html">The Find  (blind version)</a> </li>
-		 <li>The Find</li>
-		 <li><a href="4.html">The Triple Cut.</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="the-flipped-card.html">The Flipped Card.</a></li>
+		<li><a href="the-find-blind.html">The Find  (blind version)</a> </li>
+		<li>The Find</li>
+		<li><a href="the-triple-cut.html">The Triple Cut.</a></li>
+		<li><a href="info.html">Info.</a></li>
 	     </ul>
 	     </nav>
 	  </header>
@@ -29,7 +30,9 @@
 			 through the deck until you find the bottom card, the next card 
 			 is there card!
 			 And you know PRACTICE
- 		 </P>
+		  </P>
+		  <iframe width="560" height="315" src="https://www.youtube.com/embed/pHVa7zL-Kaw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		  
 	  </main>
 	  <footer>
 	    
