--- a/the-triple-cut.html
+++ b/the-triple-cut.html
@@ -11,11 +11,12 @@
 	  <header>
 	     <nav>
 	   <ul>
-	     <li><a href="index.html">Home</a></li>
-	     <li><a  href="1.html">The Flipped Card. </a></li>
-	     <li>The Find  (blind version) </li>
-		 <li><a  href="3.html"> The Find</a></li>
-		 <li><a href="4.html">The Triple Cut.</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="the-flipped-card.html">The Flipped Card.</a></li>
+		<li><a href="the-find-blind.html">The Find  (blind version)</a> </li>
+		<li><a href="the-find.html"> The Find</a></li>
+		<li>The Triple Cut.</li>
+		<li><a href="info.html">Info.</a></li>
 	     </ul>
 	     </nav>
 	  </header>
