--- a/the-flipped-card.html
+++ b/the-flipped-card.html
@@ -11,9 +11,10 @@
 	   <ul>
 	     <li><a href="index.html">Home</a></li>
 	     <li>The Flipped Card.</li>
-	     <li><a href="2.html">The Find  (blind version)</a> </li>
-		 <li><a href="3.html"> The Find</a></li>
-		 <li><a href="4.html">The Triple Cut.</a></li>
+	     <li><a href="the-find-blind.html">The Find  (blind version)</a> </li>
+		 <li><a href="the-find.html"> The Find</a></li>
+		 <li><a href="the-triple-cut.html">The Triple Cut.</a></li>
+		 <li><a href="info.html">Info.</a></li>
 	     </ul>
 	     </nav>
 	  </header>
@@ -38,7 +39,8 @@
 	     <p>
 		   This trick is good for pulling someone aside and asking if they like magic, not the best for stage acts.  
 		   And you know PRACTICE
-	     </p>
+		 </p>
+		 <iframe width="560" height="315" src="https://www.youtube.com/embed/aThL40r_aoc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	  </main>
 	  <footer>
 	    
