added bouns trick

--- a/info.html
+++ b/info.html
@@ -17,6 +17,7 @@
 		<li><a href="the-find.html"> The Find</a></li>
 		<li><a href="the-triple-cut.html">The Triple Cut.</a></li>
 		<li>Info.</li>
+		<li><a href="Ace-bouns-trick.html">?????</a></li>
 	     </ul>
 	     </nav>
 	  </header>
