--- a/info.html
+++ b/info.html
@@ -6,6 +6,15 @@
 		<title></title>
 		<link type="text/css" rel="stylesheet" href="styles.css"/>
 		<meta charset="utf-8"/>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1B6CC3ZGPK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1B6CC3ZGPK');
+</script>
 	</head>
 	<body>
 	  <header>
