Form and events page

--- a/Events.html
+++ b/Events.html
@@ -24,7 +24,7 @@
 		<li><a href="the-flipped-card.html">The Flipped Card.</a></li>
 		<li><a href="the-find-blind.html">The Find  (blind version)</a> </li>
 		<li><a href="the-find.html"> The Find</a></li>
-		<li>The Triple Cut.</li>
+		<li>Events</li>
 		<li><a href="info.html">Info.</a></li>
 	     </ul>
 	     </nav>
