--- a/info.html
+++ b/info.html
@@ -38,9 +38,8 @@
         <P>There is not to much to say for this update but stuff includes: Video's for the tricks,an info page, as well as a bouns trick</P>
 		<P>Thank you to all that have helped me build this as well as test it!!! </P>
 		<P>Go have some fun</P>
-        <P>Next Update is in Febuary!
-            See you then!
-		</P>
+		<P>Please fill out this super easy form so that I can improve the website as a whole with help from you guys!!:)</P>
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd1w9jjE5Rc1ieNwzpEgxIZzDiJogyX0Jeu2K0ydJ4KCiUe6A/viewform?embedded=true" width="640" height="1267" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 	  </main>
 	  <footer>
 	    
