--- a/the-flipped-card.html
+++ b/the-flipped-card.html
@@ -24,6 +24,7 @@
 		 <li><a href="the-find.html"> The Find</a></li>
 		 <li><a href="the-triple-cut.html">The Triple Cut.</a></li>
 		 <li><a href="info.html">Info.</a></li>
+		 <li><a href='Events.html'>Events</a></li>
 	     </ul>
 	     </nav>
 	  </header>
